--- a/chat/login.htm
+++ b/chat/login.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Login firmchat</title>
+	<title>Login • firmchat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <link rel="icon" href="../assets/logo.png" sizes="any" type="any">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
