final touchups in chat-window-ui

--- a/chat/chat-window.html
+++ b/chat/chat-window.html
@@ -47,10 +47,10 @@
 	</header>
 	<div class="mdc-top-app-bar--fixed-adjust" style="padding-bottom: 16px;"></div>
 	<div id="messages"></div>
-	<button onclick="test_msg();">test_msg</button>
+	<!-- <button onclick="test_msg();">test_msg</button>
 	<p id="user"></p>
 	<br>
-	<button onclick="logout();">logout</button>
+	<button onclick="logout();">logout</button> -->
 	<div class="textarea--fixed-adjust"></div>
 	<label class="mdc-text-field mdc-text-field--outlined mdc-text-field--textarea mdc-text-field--no-label" id="send-msg-label">
 	  <span class="mdc-notched-outline">
