--- a/chat/chat-window.html
+++ b/chat/chat-window.html
@@ -56,12 +56,11 @@
                 </div>
                 <span class="mdc-notched-outline__trailing"></span>
             </span>
-            <textarea class="mdc-text-field__input chat-window-textarea" rows="2" cols="40" id="send-msg-text"
+            <textarea class="mdc-text-field__input chat-window-textarea" rows="1" cols="40" id="send-msg-text"
                 onkeydown="validate_msg();" onkeyup="validate_msg();"></textarea>
         </label>
-        <button class="mdc-fab mdc-fab--extended" id="send-msg-btn">
+        <button class="mdc-fab mdc-ripple-upgraded" id="send-msg-btn">
             <div class="mdc-fab__ripple"></div>
-            <span class="mdc-fab__label">Send</span>
             <span class="material-icons mdc-fab__icon">&#xe5c8;</span>
         </button>
     </div>
