--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div id="menu-page" onmousewheel="event.preventDefault()" ontouchmove="event.preventDefault()">
-        <text onclick="navigate_menu('about')">About us</text>
+        <text onclick="navigate_menu('home')">About us</text>
         <text onclick="navigate_menu('services')">What we do</text>
         <text onclick="navigate_menu('projects')">What we done</text>
         <text onclick="navigate_menu('contact')">Contact Us</text>
@@ -48,7 +48,7 @@
         <p>
             Blends innovation and artistry to create elegant softwares
         </p>
-        <button class="btn btn-primary more" onclick="navigate('about')">
+        <button class="btn btn-primary more" onclick="navigate('services')">
             more
         </button>
     </section>
