--- a/index.html
+++ b/index.html
@@ -61,47 +61,45 @@
         </p>
     </section>
     <section id="projects">
-        <p style="
-        font-size: 24px;
-        margin-bottom: 0px;
-        padding-top: 5vh;
-        padding-bottom: 5vh;
-    ">Our Milestones & Portfolio</p>
+        <p>Our Milestones & Portfolio</p>
         <div class="card-container">
             <div class="card-resp">
-                <p align="center" style="font-size: 20px;">What we focused on</p>
-                <ul>
+                <div class="ul-border">
+                    <p align="center" style="font-size: 20px;">What we focused on</p>
                     <ul>
-                        <p>Websites</p>
-                        <p>Android Apps</p>
-                        <p>Voice call applications</p>
-                        <p>Video call applications</p>
-                        <p>Chat applications</p>
-                        <p>Other server side setups</p>
+                        <li>Websites</li>
+                        <li>Android Apps</li>
+                        <li>Voice call applications</li>
+                        <li>Video call applications</li>
+                        <li>Chat applications</li>
+                        <li>Other server side setups</li>
                     </ul>
-                </ul>
+                </div>
             </div>
             <div class="card-resp">
-                <p align="center" style="font-size: 20px;">Software modules</p>
+                <div class="ul-border">
+                    <p align="center" style="font-size: 20px;">Software modules</p>
+                    <ul>
+                        <li><a href="https://firmtechdev.github.io/chat/" target="_blank">Firmchat App</a></li>
+                    </ul>
+                </div>
             </div>
             <div class="card-resp">
-                <p align="center" style="font-size: 20px;">Websites</p>
-                <ul>
-                    <li><a href="https://bluecreekresort.com/" target="_blank">Blue Creek Village Resort</a><br>
-                        <!-- <text style="font-size: 10px;" onclick="navigate('faris')">faris</text>,  -->
-                        <!-- <text style="font-size: 10px;" onclick="navigate('rishad')">rishad</text> -->
-                    </li>
-                </ul>
+                <div class="ul-border">
+                    <p align="center" style="font-size: 20px;">Websites we done</p>
+                    <ul>
+                        <li><a href="https://bluecreekresort.com/" target="_blank">Blue Creek Village Resort</a><br>
+                            <!-- <text style="font-size: 10px;" onclick="navigate('faris')">faris</text>,  -->
+                            <!-- <text style="font-size: 10px;" onclick="navigate('rishad')">rishad</text> -->
+                        </li>
+                        <li><a href="https://kittyowayanad.com/" target="_blank">Kittyo Wayanad</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
     <section id="contact">
-        <p style="
-        font-size: 24px;
-        margin-bottom: 0px;
-        padding-top: 5vh;
-        padding-bottom: 5vh;
-    ">We are Developers</p>
+        <p>We are Developers</p>
         <div class="card-container">
             <div class="card-resp" id="faris">
                 <div class="card-style">
@@ -109,14 +107,14 @@
                         <div class="card-dp" style="background-image: url(assets/faris.jpg);"></div>
                         <div style="padding-left: 25px;">
                             <h4>Faris</h4>
-                            <p style="font-size: 15px;">Add a short description</p>
+                            <p style="font-size: 15px;">CEO, full-stack developer</p>
                         </div>
                     </div>
                     <p onclick="window.open('tel:+91 85899 48199', '_blank');"><i class="material-icons"
                             style="font-size: 18px;">&#xe0b0;</i> PH: +91 85899 48199</p>
                     <p><i class="material-icons" style="font-size: 18px;">&#xe80b;</i> WEB: </p>
                     <p>Git: github.com/fariskh</p>
-                    <text>Add a detailed description if required (optional)</text>
+                    <text>Software engineer</text>
                 </div>
             </div>
             <div class="card-resp" id="rishad">
@@ -125,7 +123,7 @@
                         <div class="card-dp" style="background-image: url(assets/rishad.jpg);"></div>
                         <div style="padding-left: 25px;">
                             <h4>Rishad</h4>
-                            <p style="font-size: 15px;">Web developer</p>
+                            <p style="font-size: 15px;">CEO, Web developer</p>
                         </div>
                     </div>
                     <p onclick="window.open('tel:+91 85928 97844', '_blank');"><i class="material-icons"
@@ -143,7 +141,7 @@
                         <div class="card-dp" style="background-image: url(assets/musafar.jpg);"></div>
                         <div style="padding-left: 25px;">
                             <h4>Musafar</h4>
-                            <p style="font-size: 15px;">Add a short description</p>
+                            <p style="font-size: 15px;">CEO, Technical support</p>
                         </div>
                     </div>
                     <p onclick="window.open('tel:+971 58 130 2527', '_blank');"><i class="material-icons"
@@ -151,12 +149,26 @@
                     <p onclick="window.open('http://13.48.83.133:8004/', '_blank');"><i class="material-icons"
                             style="font-size: 18px;">&#xe80b;</i> WEB: 13.48.83.133:8004</p>
                     <p>Git: github.com/muzafirsakeen</p>
-                    <text>Add a detailed description if required (optional)</text>
+                    <text>#developer, #AI, AR&VR investigator</text>
                 </div>
             </div>
         </div>
     </section>
     <footer>
+        <p><br/></p>
+        <table>
+            <tr>
+                <td class="sos-icon" style="background-image: url(./assets/);"></td>
+                <td><a href="mailto:firmtech.dev@gmail.com" target="_blank">firmtech.dev@gmail.com</a></td>
+            </tr>
+            <tr>
+                <td class="sos-icon" style="background-image: url(./assets/call.svg);"></td>
+                <td><a href="https://www.instagram.com/firmtech_/" target="_blank">instagram.com/firmtech_</a></td>
+            </tr>
+        </table>
+        <a href="">+91 85899 48199</a> | <a href=""></a>
+        
+        
         <p id="copy"></p>
     </footer>
 </body>
