Some UI improvements

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
                 <div class="ul-border">
                     <p align="center" style="font-size: 20px;">What we focused on</p>
                     <ul>
-                        <li>Websites</li>
-                        <li>Android Apps</li>
-                        <li>Voice call applications</li>
-                        <li>Video call applications</li>
-                        <li>Chat applications</li>
-                        <li>Other server side setups</li>
+                        <li class="listing-link-style">Websites</li>
+                        <li class="listing-link-style">Android Apps</li>
+                        <li class="listing-link-style">Voice call applications</li>
+                        <li class="listing-link-style">Video call applications</li>
+                        <li class="listing-link-style">Chat applications</li>
+                        <li class="listing-link-style">Other server side setups</li>
                     </ul>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                 <div class="ul-border">
                     <p align="center" style="font-size: 20px;">Software modules</p>
                     <ul>
-                        <li><a href="https://firmtechdev.github.io/chat/" target="_blank">Firmchat App</a></li>
+                        <li><a href="https://firmtechdev.github.io/chat/" class="listing-link-style" target="_blank">Firmchat App</a> &#128279;</li>
                     </ul>
                 </div>
             </div>
@@ -88,11 +88,11 @@
                 <div class="ul-border">
                     <p align="center" style="font-size: 20px;">Websites we done</p>
                     <ul>
-                        <li><a href="https://bluecreekresort.com/" target="_blank">Blue Creek Village Resort</a><br>
+                        <li><a href="https://bluecreekresort.com/" class="listing-link-style" target="_blank">Blue Creek Village Resort</a>&#128279;<br>
                             <!-- <text style="font-size: 10px;" onclick="navigate('faris')">faris</text>,  -->
                             <!-- <text style="font-size: 10px;" onclick="navigate('rishad')">rishad</text> -->
                         </li>
-                        <li><a href="https://kittyowayanad.com/" target="_blank">Kittyo Wayanad</a></li>
+                        <li><a href="https://kittyowayanad.com/" class="listing-link-style" target="_blank">Kittyo Wayanad</a>&#128279;</li>
                     </ul>
                 </div>
             </div>
@@ -155,20 +155,11 @@
         </div>
     </section>
     <footer>
-        <p><br/></p>
-        <table>
-            <tr>
-                <td class="sos-icon" style="background-image: url(./assets/);"></td>
-                <td><a href="mailto:firmtech.dev@gmail.com" target="_blank">firmtech.dev@gmail.com</a></td>
-            </tr>
-            <tr>
-                <td class="sos-icon" style="background-image: url(./assets/call.svg);"></td>
-                <td><a href="https://www.instagram.com/firmtech_/" target="_blank">instagram.com/firmtech_</a></td>
-            </tr>
-        </table>
-        <a href="">+91 85899 48199</a> | <a href=""></a>
-        
-        
+        <div class="links-container-div">
+            <a href="mailto:firmtech.dev@gmail.com" style="background-image: url(./assets/gmail.svg);" class="sos-icon" target="_blank"></a>
+            <a href="https://www.instagram.com/firmtech_/" style="background-image: url(./assets/instagram.svg);" class="sos-icon" target="_blank"></a>
+            <a href="https://github.com/firmtechdev" style="background-image: url(./assets/github.svg);" class="sos-icon" target="_blank"></a>
+        </div>
         <p id="copy"></p>
     </footer>
 </body>
