--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
                     <p onclick="window.open('https://rishad-p.github.io/', '_blank');"><i class="material-icons"
                             style="font-size: 18px;">&#xe80b;</i> WEB: rishad-p.github.io</p>
                     <p>Git: github.com/rishad-p</p>
-                    <text>i'm passionate and specialized in animated ui-ux in modern web development world. and i'm a
-                        part time coder</text>
+                    <text>i'm passionate and specialized in animated ui-ux in modern web development</text>
                 </div>
             </div>
             <div class="card-resp">
