sum unfinished changes(prodects presentation)

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         </div>
     </div>
     <div id="menu-page" onmousewheel="event.preventDefault()" ontouchmove="event.preventDefault()">
-        <text class="i1" onclick="navigate_menu('home')">About us</text>
-        <text class="i2" onclick="navigate_menu('services')">What we do</text>
-        <text class="i3" onclick="navigate_menu('projects')">What we done</text>
-        <text class="i4" onclick="navigate_menu('contact')">Contact Us</text>
+        <text class="i1" onclick="navigate_menu('home')">&nbsp;About us</text>
+        <text class="i2" onclick="navigate_menu('services')">&nbsp;What we do</text>
+        <text class="i3" onclick="navigate_menu('projects')">&nbsp;What we done</text>
+        <text class="i4" onclick="navigate_menu('contact')">&nbsp;Contact Us</text>
     </div>
 
     <section id="home">
@@ -82,9 +82,10 @@
                     <p align="center" style="font-size: 20px;">Software modules</p>
                     <ul>
                         <li><a href="https://firmtechdev.github.io/chat/" class="listing-link-style" target="_blank">Firmchat App</a> &#128279;</li>
-                        <div>
+                        <div class="device-container">
                             <img src="assets/device-frame.png" class="device-frame" />
-                            <div class="device-screen"></div>
+                            <img src="assets/laptop-frame.svg" class="laptop-frame">
+                            <!-- <div class="device-screen"></div> -->
                         </div>
                     </ul>
                 </div>
