--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/ScrollTrigger.min.js"></script>
     <script type="text/javascript" src="scripts/index.js"></script>
 </head>
 
@@ -36,7 +38,29 @@
 
     <section id="home">
         <label class="description">
-            Firmtech is a Software development company.
+            <!-- Firmtech is a Software development company.
+            The company has a proud legacy spanning of
+            over 3 successful years of software development
+            Firmtech was born in 26th August 2017 as a
+            brainchild of three professionals Muhammed Faris
+            , Rishad and Musafar Sakeen
+            Specialized in Software developing, Web
+            developing, Android developing, Cloud
+            computing, Virtual reality and Ogmented reality -->
+        </label>
+        <p id="description">
+            
+        </p>
+        <button class="btn btn-primary more" style="visibility: hidden;">
+            more
+        </button>
+    </section>
+
+  <!-- <div class="spacer"></div> -->
+  <section class="pinned-fade">
+    <div class="fade-text">
+      <p style="font-size: 1.5rem;">
+        Firmtech is a Software development company.
             The company has a proud legacy spanning of
             over 3 successful years of software development
             Firmtech was born in 26th August 2017 as a
@@ -45,22 +69,21 @@
             Specialized in Software developing, Web
             developing, Android developing, Cloud
             computing, Virtual reality and Ogmented reality
-        </label>
-        <p>
-            Blends innovation and artistry to create elegant softwares
-        </p>
-        <button class="btn btn-primary more" onclick="navigate('services')">
-            more
-        </button>
-    </section>
-    <section id="services">
-        <p>
+      </p>
+    </div>
+  </section>
+<!-- <div class="spacer"></div> -->
+  <section id="services" class="pinned-scale">
+    <div class="scale-text">
+      <p style="font-size: 2rem;">
             We provides web applications, softwares and <br />
             Android applications development <br />
             in elegant user experience, animated and <br />
             impressive users interfaces
-        </p>
-    </section>
+      </p>
+    </div>
+  </section>
+<!-- <div class="spacer"></div> -->
     <section id="projects">
         <p>Our Milestones & Portfolio</p>
         <div class="card-container">
@@ -82,10 +105,9 @@
                     <p align="center" style="font-size: 20px;">Software modules</p>
                     <ul>
                         <li><a href="https://firmtechdev.github.io/chat/" class="listing-link-style" target="_blank">Firmchat App</a> &#128279;</li>
-                        <div class="device-container">
-                            <img src="assets/device-frame.png" class="device-frame" />
-                            <img src="assets/laptop-frame.svg" class="laptop-frame">
-                            <!-- <div class="device-screen"></div> -->
+                        <div class="screenshort-container">
+                            <img src="assets/chat-app-home.png" height="100%">
+                            <img src="assets/chat-app-chat-window.png" height="100%">
                         </div>
                     </ul>
                 </div>
@@ -168,5 +190,4 @@
         <p id="copy"></p>
     </footer>
 </body>
-
 </html>
